# project-course

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  pyproject.toml
.agents/skills/doc-context-tracking/: SKILL.md
.github/: copilot-instructions.md
.project-skills/: doc-context-tracking.md
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
data/: README.md
data/samples/: demo_looseness.csv  demo_normal.csv  demo_unbalance.csv
doc/: Research Proposal (ppt).pptx  context.md  data-contract.md  data-contract.zh.md  feature_schema.md  team-alignment-questions.md  team-alignment-questions.zh.md  team-interfaces.md  team-interfaces.zh.md  开题报告.md
doc/communications/: supervisor-first-contact_en.md  supervisor-meeting-confirmation_en.md
doc/communications/2nd-meeting/: current-project-architecture.puml  hardware-sampling-parameters.puml  model-update-and-metrics.puml  time-sync-and-fusion-flow.puml
doc/context/: key-context-index.md
doc/plantuml/: algorithm-implementation-plan.puml  innovation-structure.puml  innovation-structure_en.puml  ml-incremental-route.puml  research-plan-gantt.puml  research-plan-gantt_en.puml  system-architecture-current.puml  system-engineering-route.puml  system-implementation-plan.puml
frontend/dashboard/: index.html  package-lock.json  package.json
frontend/dashboard/src/: App.tsx
laboratory/global-camera/: README.md  pyproject.toml
laboratory/global-camera/src/global_camera_lab/: __init__.py  __main__.py  camera.py  main.py  qt_preview.py
laboratory/motion-amplifier/: experiment_car_engine.md  experiment_guitar.md  feature_schema.md  pyproject.toml
laboratory/motion-amplifier/scripts/: analyze_guitar.py  analyze_video_stream.py
motor_fault_pca_project/: README.md
motor_fault_pca_project/src/: check_visual_roi.py  collect_vibration_features.py  collect_vibration_live_check.py  collect_visual_features.py  diagnose_live_vibration.py  diagnose_vibration_pca.py  pca_detector.py  realtime_detect.py  realtime_features.py  retrain_pca_from_normal_buffer.py  run_all.py  test_visual_pca.py  train_visual_pca.py  utils.py  visual_frequency_probe.py
scripts/: generate_demo_samples.py  update_doc_context_index.py
specs/001-dual-modal-monitoring/: dashboard-prototype.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-dual-modal-monitoring/checklists/: requirements.md
specs/001-dual-modal-monitoring/contracts/: api.yaml
src/project_course/: __init__.py  __main__.py  main.py
src/project_course/api/: __init__.py  __main__.py  app.py  config.py
src/project_course/camera/: __init__.py  __main__.py  cli.py  core.py  v4l2.py
src/project_course/fusion/: camera_features.py  feature_vector_fusion.py  imu_features.py  schema.py  time_sync.py
src/project_course/sensors/: __init__.py  ms6dsv.py  ms6dsv_cli.py
src/project_course/services/: capture_service.py  imu_stream.py  (+7 more)
tests/: test_api.py  test_camera.py  test_ingest.py  test_main.py  test_real_pipeline.py  test_visual_auto_roi.py
tests/contract/: test_api_contract.py  test_model_versions_contract.py  test_tasks_windows_contract.py
tests/integration/: test_capture_pipeline.py  test_incremental_update_flow.py
tests/unit/: test_imu_protocol.py  test_incremental_threshold.py  test_ms6dsv_cli.py  test_time_sync.py
(+34 files in other folders)
