[project]
name = "project-course"
version = "0.1.0"
requires-python = "==3.10.12"
dependencies = []

[project.scripts]
project-course = "project_course.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["laboratory/legacy/motion-amplifier"]
line-length = 88
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
